Update build script to build the user manual for version 3 from https://github.com/geonetwork/doc